# error-fatality

./: Cargo.toml  README.md
.github/workflows/: format_check_lint_test.yaml
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs  types.rs
proc-macro/src/test/: fatality.rs  mod.rs  split.rs
proc-macro/src/types/: fatality.rs  mod.rs  split.rs
proc-macro/src/types/split/: gen.rs  mod.rs  opts.rs
src/: Cargo.toml  lib.rs  test.rs  tests.rs
src/tests/: basic.rs  nested-split-forward.rs
src/tests/ui/: err-01.rs  err-01.stderr  err-02.rs  err-02.stderr  err-03.rs  err-03.stderr  err-04-split-attrs-missing-derives.rs  err-04-split-attrs-missing-derives.stderr  ok-01-basic.rs  ok-02-split.rs  ok-03-split-attrs.rs  ok-04-nested-split-and-defer-named.rs  ok-05-nested-split-and-defer-unnamed.rs  ok-06-nested-split-and-defer-named2.rs  ok-07-nested-split-and-defer-unnamed2.rs  ok-08-double-down.rs  ok-09-defer-named.rs  ok-10-defer-unnamed.rs  ok-11-generics-bounds.rs
tests/: nested-split-forward.rs
tests/ui/: err-01.rs  err-02.stderr  err-04-split-attrs-missing-derives.stderr  ok-01-basic.rs  ok-02-split.rs  ok-04-nested-split-and-defer-named.rs  ok-05-nested-split-and-defer-unnamed.rs  ok-06-nested-split-and-defer-named2.rs  ok-09-defer-named.rs
