[workspace]
members = [".", "proc-macro"]

[package]
name = "fatality"
version = "0.1.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
description = "Fatality extension to `thiserror::Error`"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drahnr/fatality.git"

[dependencies]
fatality-proc-macro = { version = "0.1.0", path = "./proc-macro" }

[dev-dependencies]
assert_matches = "1"
log = "0.4"
thiserror = "1.0"
trybuild = "1.0"

[features]
default = []
expand = ["fatality-proc-macro/expand"]
