[workspace]
members = ["proc-macro", "src"]
resolver = "3"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"
print_stdout = "deny"
print_stderr = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"

[workspace.package]
version = "0.1.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drahnr/fatality.git"

[workspace.dependencies]
assert_matches = "1"
expander = "2"
fatality-proc-macro = { path = "./proc-macro" }
indexmap = "2"
log = "0.4"
proc-macro-crate = "3.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2"
thiserror = "2"
trybuild = "1.0"
