[dependencies]
expander = { workspace = true }
indexmap = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[dependencies.syn]
features = ["parsing", "printing", "full", "extra-traits"]
workspace = true

[dev-dependencies]
assert_matches = { workspace = true }

[features]
default = []
expand = []

[lib]
proc-macro = true

[lints]
workspace = true

[package]
authors = { workspace = true }
description = "Fatality extension to crate thiserror - proc-macro part"
edition = { workspace = true }
name = "error-fatality-proc-macro"
repository = { workspace = true }
version = { workspace = true }
license = { workspace = true }
